--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "pandas>=2.3.3",
     "plotly>=6.5.1",
     "streamlit>=1.52.2",
+    "streamlit-sortables>=0.3.1",
     "yfinance>=1.0",
 ]
